// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Matches the desktop snapshot 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c6:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #003A5A;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  height: var(--size-1halfx);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-1halfx);
  outline: 1px solid #006296;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c8:hover {
  background-color: #E0F0F9;
  cursor: default;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  height: var(--size-1halfx);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-1halfx);
  outline: 0;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c9:hover {
  background-color: #DBDEE1;
  cursor: pointer;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin-bottom: 0;
  margin-right: var(--spacing-3x);
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <span
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </span>
    <button
      aria-disabled="true"
      aria-label="previous page"
      class="c5 c6"
      data-testid="previousPageButton"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
    <ol
      class="c7"
    >
      <li
        class="c8"
        data-testid="page-1"
        tabindex="0"
      >
        <a
          aria-current="page"
          aria-label="go to page 1"
        >
          1
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-2"
        tabindex="0"
      >
        <a
          aria-label="go to page 2"
        >
          2
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-3"
        tabindex="0"
      >
        <a
          aria-label="go to page 3"
        >
          3
        </a>
      </li>
    </ol>
    <button
      aria-disabled="false"
      aria-label="next page"
      class="c5 c6"
      data-testid="nextPageButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </nav>
</div>
`;

exports[`Pagination Matches the desktop snapshot with multiples digits page numbers 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c6:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #003A5A;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  height: var(--size-1halfx);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-1halfx);
  outline: 1px solid #006296;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c8:hover {
  background-color: #E0F0F9;
  cursor: default;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  height: var(--size-1halfx);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-1halfx);
  outline: 0;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c9:hover {
  background-color: #DBDEE1;
  cursor: pointer;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c3 {
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin-bottom: 0;
  margin-right: var(--spacing-3x);
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <span
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </span>
    <button
      aria-disabled="true"
      aria-label="previous page"
      class="c5 c6"
      data-testid="previousPageButton"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
    <ol
      class="c7"
    >
      <li
        class="c8"
        data-testid="page-1"
        tabindex="0"
      >
        <a
          aria-current="page"
          aria-label="go to page 1"
        >
          1
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-2"
        tabindex="0"
      >
        <a
          aria-label="go to page 2"
        >
          2
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-3"
        tabindex="0"
      >
        <a
          aria-label="go to page 3"
        >
          3
        </a>
      </li>
    </ol>
    <button
      aria-disabled="false"
      aria-label="next page"
      class="c5 c6"
      data-testid="nextPageButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </button>
  </nav>
</div>
`;

exports[`Pagination Matches the mobile snapshot 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-3x);
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c6:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c6 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #003A5A;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-2x);
  outline: 1px solid #006296;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c8:hover {
  background-color: #E0F0F9;
  cursor: default;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-2x);
  outline: 0;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c9:hover {
  background-color: #DBDEE1;
  cursor: pointer;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin-bottom: var(--spacing-1halfx);
  margin-right: 0;
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <span
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </span>
    <button
      aria-disabled="true"
      aria-label="previous page"
      class="c5 c6"
      data-testid="previousPageButton"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
    <ol
      class="c7"
    >
      <li
        class="c8"
        data-testid="page-1"
        tabindex="0"
      >
        <a
          aria-current="page"
          aria-label="go to page 1"
        >
          1
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-2"
        tabindex="0"
      >
        <a
          aria-label="go to page 2"
        >
          2
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-3"
        tabindex="0"
      >
        <a
          aria-label="go to page 3"
        >
          3
        </a>
      </li>
    </ol>
    <button
      aria-disabled="false"
      aria-label="next page"
      class="c5 c6"
      data-testid="nextPageButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
  </nav>
</div>
`;

exports[`Pagination Matches the mobile snapshot with multiples digits page numbers 1`] = `
.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-3x);
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #1B1C1E;
}

.c6:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c6 > svg {
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c4 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 var(--spacing-half);
  padding: 0;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E0F0F9;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #003A5A;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-2x);
  outline: 1px solid #006296;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c8:hover {
  background-color: #E0F0F9;
  cursor: default;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #FFFFFF;
  border-radius: 1rem;
  box-sizing: border-box;
  color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 1rem;
  font-weight: var(--font-normal);
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  margin: 0 var(--spacing-half);
  min-width: var(--size-2x);
  outline: 0;
  padding: 0 var(--spacing-1x);
  text-align: center;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c9:hover {
  background-color: #DBDEE1;
  cursor: pointer;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin-bottom: var(--spacing-1halfx);
  margin-right: 0;
  white-space: nowrap;
}

.c2 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <nav
    aria-labelledby="uuid1"
    class="c1"
  >
    <span
      aria-live="off"
      role="status"
    >
      <h3
        class="c2"
        data-testid="currentPageLabelHeading"
        id="uuid1"
      >
        <span
          class="c3"
          data-testid="resultsLabel"
        >
          <span
            class="c4"
          >
            Pagination - 
          </span>
          0–0 of 0 results
        </span>
      </h3>
    </span>
    <button
      aria-disabled="true"
      aria-label="previous page"
      class="c5 c6"
      data-testid="previousPageButton"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
    <ol
      class="c7"
    >
      <li
        class="c8"
        data-testid="page-1"
        tabindex="0"
      >
        <a
          aria-current="page"
          aria-label="go to page 1"
        >
          1
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-2"
        tabindex="0"
      >
        <a
          aria-label="go to page 2"
        >
          2
        </a>
      </li>
      <li
        class="c9"
        data-testid="page-3"
        tabindex="0"
      >
        <a
          aria-label="go to page 3"
        >
          3
        </a>
      </li>
    </ol>
    <button
      aria-disabled="false"
      aria-label="next page"
      class="c5 c6"
      data-testid="nextPageButton"
      type="button"
    >
      <svg
        aria-hidden="true"
        color="currentColor"
        focusable="false"
        height="24"
        width="24"
      />
    </button>
  </nav>
</div>
`;
